# cat-watcher

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  Brewfile  LICENSES.md  README.md  alembic.ini  cat-watcher.sublime-project  config.example.toml  dprint.jsonc  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  stylelint.config.mjs
.basedpyright/: baseline.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 3c9ff40695f4_add_poller_empty_after_quiet_alert_type.py  9a64f905fb03_clip_frames_table.py  fda18cd0b832_initial_schema.py
docs/: outbound-email-setup.md
docs/plans/: 2026-05-01-cat-watcher.md  2026-05-06-httpxyz-migration.md  2026-05-07-timeline-redesign.md  2026-05-08-thumbnails-redesign.md  2026-05-10-poller-robustness.md  2026-05-10-test-coverage-improvements.md
docs/resources/: amcrest-bracket-quirk.md
docs/specs/: 2026-05-01-cat-watcher-design.md  2026-05-05-structured-logging-design.md  2026-05-06-httpxyz-migration-design.md  2026-05-07-timeline-redesign-design.md
migrations/: env.py
migrations/versions/: 3c9ff40695f4_add_poller_empty_after_quiet_alert_type.py  9a64f905fb03_clip_frames_table.py  fda18cd0b832_initial_schema.py
scripts/: forbid_binary_outside_fixtures.sh  install_launchagents.sh  uninstall_launchagents.sh
scripts/plists/: com.robgant.cat-watcher.alerts.plist.template  com.robgant.cat-watcher.backup.plist.template  com.robgant.cat-watcher.poller.plist.template  com.robgant.cat-watcher.web.plist.template
src/cat_watcher/: __init__.py  __main__.py  alert_templates.py  alerts.py  amcrest_client.py  backup.py  config.py  db.py  detector.py  import_local.py  logging_setup.py  logs_viewer.py  notifier.py  poller.py  retention.py  storage.py  thumbnails.py
src/cat_watcher/scripts/: __init__.py  render_plists.py
src/cat_watcher/web/: __init__.py  app.py  auth.py  routes.py
src/cat_watcher/web/static/: auto_refresh.js  clip_detail.js  style.css  timeline.js
src/cat_watcher/web/templates/: alerts.html.jinja  base.html.jinja  cameras.html.jinja  clip_detail.html.jinja  clips.html.jinja  stats.html.jinja  timeline.html.jinja
tests/: conftest.py
tests/fixtures/: cli_test_helpers.py  httpxyz_compat.py  make_clip.py  regenerate-cat-image.sh  respx_httpxyz.py  tz_helpers.py
tests/integration/: test_cli_logs_follow.py  test_detector_real_model.py  test_import_local_end_to_end.py  test_migrations.py  test_poller_end_to_end.py  test_web_clips.py  test_web_dev_reload.py  test_web_health.py  test_web_label.py  test_web_stats_alerts.py  test_web_timeline.py
tests/unit/: test_alert_templates.py  test_alerts.py  test_amcrest_client.py  test_backup.py  test_cli.py  test_cli_logs.py  test_cli_reanalyze.py  test_config.py  test_db.py  test_detector.py  test_fixtures.py  test_httpxyz_shim.py  test_import_local.py  test_logging_setup.py  test_notifier.py  test_poller.py  test_render_plists.py  test_retention.py  test_storage.py  test_thumbnails.py
