[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "cat-watcher"
version = "0.1.0"
description = "Monitor indoor litter-box cameras: ingest, classify, alert, browse."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [ { name = "J Rob Gant", email = "rgant@alum.wpi.edu" } ]
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.4,<2",
  "fastapi[standard]>=0.136.1,<0.137",
  "httpx>=0.28.1,<0.29",
  "jinja2>=3.1.6,<4",
  "pydantic-settings>=2.14.0,<3",
  "sqlalchemy>=2.0.49,<3",
  "uvicorn[standard]>=0.46.0,<0.47",
]
[project.scripts]
cat-watcher = "cat_watcher.__main__:main"
cat-watcher-poller = "cat_watcher.poller:main"
cat-watcher-alerts = "cat_watcher.alerts:main"
cat-watcher-web = "cat_watcher.web.app:main"
cat-watcher-backup = "cat_watcher.backup:main"

[dependency-groups]
dev = [
  "aiosmtpd",
  "basedpyright",
  "mypy",
  "pylint",
  "pylint-per-file-ignores",
  "pylint-pytest>=2.0.0a1",
  "pylint-venv",
  "pyproject-fmt",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-randomly",
  "respx",
  "ruff",
]

[tool.pixi.dependencies]
python = "3.14.*"
ffmpeg = ">=8.1.1,<9"
numpy = ">=2.4.3,<3"
opencv = ">=4.13.0,<5"
pytorch = ">=2.10.0,<3"
torchvision = "==0.25"  # version required for pytorch 2.10, conda doesn't have 2.11 yet.
ultralytics = ">=8.4.46,<9"
[tool.pixi.environments]
default = { features = [ "dev" ], solve-group = "default" }
[tool.pixi.pypi-dependencies]
cat-watcher = { path = ".", editable = true }
[tool.pixi.tasks.agents-status]
cmd = "launchctl list | grep cat-watcher"
description = "Show status of cat-watcher launchd agents"
[tool.pixi.tasks.alerts-once]
cmd = "cat-watcher-alerts --once"
description = "Run alerts pipeline once (no daemon)"
[tool.pixi.tasks.check]
cmd = "pytest"
depends-on = [ "format", "lint" ]
description = "CI gate: format + lint + test"
[tool.pixi.tasks.clean]
cmd = """\
  find . -type d \\( -name __pycache__ -o -name .pytest_cache -o -name .mypy_cache -o -name .ruff_cache \\) -exec rm -rf {} + 2>/dev/null
  find . -type f -name '*.pyc' -delete 2>/dev/null
  true \
  """
description = "Delete Python/pytest/mypy/ruff cache directories"
[tool.pixi.tasks.db-downgrade]
cmd = "alembic downgrade -1"
description = "Roll back one alembic migration"
[tool.pixi.tasks.db-revision]
cmd = 'alembic revision --autogenerate -m "{{ message }}"'
args = [ { arg = "message", default = "" } ]
description = 'Create alembic auto-revision; pass message="..."'
[tool.pixi.tasks.db-upgrade]
cmd = "alembic upgrade head"
description = "Apply pending alembic migrations to head"
[tool.pixi.tasks.deploy-update]
cmd = """\
  ssh media-center 'set -e
  cd ~/Programming/cat-watcher \
    && git pull \
    && pixi install \
    && pixi run alembic upgrade head \
    && for a in poller alerts web backup; do
      launchctl kickstart -k gui/$(id -u)/com.robgant.cat-watcher.$a
    done'\
  """
description = "Pull, install, migrate, and restart all agents on media-center"
[tool.pixi.tasks.dev]
cmd = "cat-watcher-web --reload"
description = "Run web app with reload"
[tool.pixi.tasks.fetch-clips]
cmd = "cat-watcher-poller --once --no-detect"
description = "Poll without YOLO inference"
[tool.pixi.tasks.fmt-dprint]
cmd = """\
  bash -c 'p="$1"
  shift
  if [ -d "$p" ]; then dprint "$@" "${p%/}/**"; else dprint "$@" "$p"; fi' _ "{{ path }}" {{ dprint_cmd }}\
  """
args = [ { arg = "path", default = "." }, { arg = "dprint_cmd", default = "fmt --allow-no-files" } ]
description = "dprint with the directory-recursion glob fix; pass dprint_cmd=check for dry-run"
[tool.pixi.tasks.fmt-sh]
cmd = "shfmt --write scripts/ tests/fixtures/"
description = "Format shell scripts with shfmt"
[tool.pixi.tasks.fmt-toml]
cmd = "pyproject-fmt --no-print-diff pyproject.toml"
description = "Format pyproject.toml with pyproject-fmt"
[tool.pixi.tasks.format]
cmd = """\
  bash -c 'e=0
  pyproject-fmt --no-print-diff pyproject.toml || e=$?
  shfmt --write scripts/ tests/fixtures/ || e=$?
  markdownlint --fix . || e=$?
  ruff check --fix --silent "$@" || e=$?
  ruff format "$@" || e=$?
  exit $e' _ {{ paths }}\
  """
args = [ { arg = "paths", default = "." } ]
description = "Auto-format; pass a path to scope dprint + ruff"
[[tool.pixi.tasks.format.depends-on]]
task = "fmt-dprint"
args = [ "{{ paths }}", "fmt --allow-no-files" ]
[tool.pixi.tasks.install-agents]
cmd = "bash scripts/install_launchagents.sh"
description = "Install cat-watcher launchd agents (this Mac)"
[tool.pixi.tasks.lint]
cmd = """\
  bash -c 'e=0
  ruff check "$@" || e=$?
  basedpyright "$@" || e=$?
  mypy "$@" || e=$?
  pylint "$@" || e=$?
  find scripts tests/fixtures -name "*.sh" -type f -exec shellcheck "{}" + || e=$?
  # Uncomment when we have GitHub Actions
  # actionlint || e=$?
  # zizmor .github/workflows || e=$?
  exit $e' _ {{ paths }}\
  """
args = [ { arg = "paths", default = "." } ]
description = "Run all linters; pass a path to scope the Python linters"
[tool.pixi.tasks.lint-actions]
cmd = """\
  bash -c 'e=0
  actionlint || e=$?
  zizmor .github/workflows || e=$?
  exit $e'\
  """
description = "Lint GitHub Actions workflows (actionlint + zizmor)"
[tool.pixi.tasks.lint-sh]
cmd = "bash -c \"find scripts tests/fixtures -name '*.sh' -type f -exec shellcheck '{}' +\""
description = "Lint shell scripts with shellcheck (across scripts/ and tests/fixtures/)"
[tool.pixi.tasks.outdated]
cmd = "pixi update --dry-run"
description = "Show what would be updated"
[tool.pixi.tasks.poll-once]
cmd = "cat-watcher-poller --once"
description = "One-shot poll; trailing flags forward (e.g., --since, --limit)"
[tool.pixi.tasks.test-on-mini]
cmd = "ssh media-center 'cd ~/Programming/cat-watcher && git pull && pixi install && pixi run pytest'"
description = "Pull and run pytest on media-center over SSH"
[tool.pixi.tasks.uninstall-agents]
cmd = "bash scripts/uninstall_launchagents.sh"
description = "Remove cat-watcher launchd agents (this Mac)"
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64" ]

# Tool Configuration
[tool.ruff]
target-version = "py314"
line-length = 140
indent-width = 4
namespace-packages = [
  # The alembic/ tree is also a namespace package (env.py + versions/*.py are loaded by alembic, not
  # imported as a normal package).
  "alembic",
  # Test directories are PEP 420 namespace packages (no __init__.py) because pytest runs under
  # --import-mode=importlib.
  "tests",
]
src = [ "src" ]
extend-exclude = [ "*.mako", "*.md" ]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "D",      # pydocstyle - too verbose for strict typing focus
  "FIX002", # allow TODO comments with author and link
  "ISC001", # single-line-implicit-string-concatenation - conflicts with formatter
]
[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
  # Test files can use assert statements, magic values, access private members, and use late imports
  # to control import side effects around patches.
  "PLC0415",
  "PLR2004",
  "S101",
  "SLF001",
]

[tool.pylint]
load-plugins = [
  "pylint.extensions.check_elif",
  "pylint.extensions.eq_without_hash",
  "pylint.extensions.redefined_loop_name",
  "pylint.extensions.typing",
  "pylint_pytest",
  "pylint_per_file_ignores",
]
jobs = 0  # Auto-detect CPU count
[tool.pylint.basic]
good-names = [ "i", "j", "k", "v", "ex", "Run", "_", "id" ]
bad-names = [ "foo", "bar", "baz", "qux", "toto", "tutu", "tata" ]
[tool.pylint.design]
max-args = 5
max-locals = 15
max-attributes = 7
max-statements = 50
[tool.pylint.format]
max-line-length = 140
expected-line-ending-format = "LF"
# Allow long URLs/type comments to exceed line limit
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$|\\s+# (type|pyright|pylint):"
[tool.pylint.MAIN]
init-hook = """
try: import pylint_venv
except ImportError: pass
else: pylint_venv.inithook()
"""
recursive = true
ignore = [ ".pixi" ]
[tool.pylint.messages_control]
disable = [
  # https://github.com/astral-sh/ruff/issues/970
  # Error
  "assigning-non-slot",                    # Duplicated with Ruff (PLE0237)
  "await-outside-async",                   # Duplicated with Ruff (PLE1142)
  "bad-configuration-section",
  "bad-format-character",                  # Duplicated with Ruff (PLE1300)
  "bad-plugin-value",
  "bad-str-strip-call",                    # Duplicated with Ruff (PLE1310)
  "bad-string-format-type",                # Duplicated with Ruff (PLE1307)
  "bidirectional-unicode",                 # Duplicated with Ruff (PLE2502)
  "broken-collections-callable",
  "broken-noreturn",
  "continue-in-finally",                   # Duplicated with Ruff (PLE0116)
  "dict-iter-missing-items",
  "duplicate-argument-name",
  "duplicate-bases",                       # Duplicated with Ruff (PLE0241)
  "format-needs-mapping",                  # Duplicated with Ruff (F502)
  "function-redefined",                    # Duplicated with Ruff (F811)
  "init-is-generator",                     # Duplicated with Ruff (PLE0100)
  "invalid-all-format",                    # Duplicated with Ruff (PLE0605)
  "invalid-all-object",                    # Duplicated with Ruff (PLE0604)
  # "invalid-bool-returned",               # Duplicated with Ruff (PLE0304)
  "invalid-bytes-returned",                # Duplicated with Ruff (PLE0308)
  "invalid-character-backspace",           # Duplicated with Ruff (PLE2510)
  "invalid-character-esc",                 # Duplicated with Ruff (PLE2513)
  "invalid-character-nul",                 # Duplicated with Ruff (PLE2514)
  "invalid-character-sub",                 # Duplicated with Ruff (PLE2512)
  "invalid-character-zero-width-space",    # Duplicated with Ruff (PLE2515)
  "invalid-envvar-value",
  "invalid-hash-returned",                 # Duplicated with Ruff (PLE0309)
  "invalid-index-returned",                # Duplicated with Ruff (PLE0305)
  "invalid-length-returned",               # Duplicated with Ruff (PLE0303)
  "invalid-str-returned",
  "logging-too-few-args",                  # Duplicated with Ruff (PLE1206)
  "logging-too-many-args",                 # Duplicated with Ruff (PLE1205)
  "misplaced-bare-raise",                  # Duplicated with Ruff (PLE0704)
  "missing-format-string-key",             # Duplicated with Ruff (F524)
  "mixed-format-string",                   # Duplicated with Ruff (F506)
  # "modified-iterating-set",              # Duplicated with Ruff (PLE4703)
  "no-self-argument",                      # Duplicated with Ruff (N805)
  "nonexistent-operator",                  # Duplicated with Ruff (B002)
  "nonlocal-and-global",                   # Duplicated with Ruff (PLE0115)
  "nonlocal-without-binding",              # Duplicated with Ruff (PLE0117)
  "not-in-loop",                           # Duplicated with Ruff (F701, F702)
  "notimplemented-raised",                 # Duplicated with Ruff (F901)
  "potential-index-error",                 # Duplicated with Ruff (PLE0643)
  "relative-beyond-top-level",             # Duplicated with Ruff (TID252)
  "repeated-keyword",                      # Duplicated with Ruff (PLE1132)
  "return-arg-in-generator",
  "return-in-init",                        # Duplicated with Ruff (PLE0101)
  "return-outside-function",               # Duplicated with Ruff (F706)
  "singledispatch-method",                 # Duplicated with Ruff (PLE1519)
  "singledispatchmethod-function",         # Duplicated with Ruff (PLE1520)
  "star-needs-assignment-target",          # Duplicated with Ruff (syntax error in preview)
  "syntax-error",                          # Duplicated with Ruff (always enabled)
  "too-few-format-args",                   # Duplicated with Ruff (F524)
  "too-many-format-args",                  # Duplicated with Ruff (F522)
  "too-many-star-expressions",             # Duplicated with Ruff (F622)
  "truncated-format-string",               # Duplicated with Ruff (F501)
  "undefined-all-variable",                # Duplicated with Ruff (F822)
  "undefined-variable",                    # Duplicated with Ruff (F821)
  "unexpected-special-method-signature",   # Duplicated with Ruff (PLE0302)
  "used-before-assignment",                # Duplicated with Ruff (F821)
  "used-prior-global-declaration",         # Duplicated with Ruff (PLE0118)
  "yield-inside-async-function",           # Duplicated with Ruff (PLE1700)
  "yield-outside-function",                # Duplicated with Ruff (F704)
  # Warning
  "anomalous-backslash-in-string",         # Duplicated with Ruff (W605)
  "assert-on-string-literal",              # Duplicated with Ruff (PLW0129)
  "assert-on-tuple",                       # Duplicated with Ruff (F631)
  # "bad-dunder-name",                     # Duplicated with Ruff (PLW3201)
  "bad-format-string",                     # Duplicated with Ruff (F521)
  "bad-indentation",                       # Duplicated with Ruff (E111)
  "bad-open-mode",                         # Duplicated with Ruff (PLW1501)
  "bad-staticmethod-argument",             # Duplicated with Ruff (PLW0211)
  "bare-except",                           # Duplicated with Ruff (E722)
  "binary-op-exception",                   # Duplicated with Ruff (PLW0711)
  "boolean-datetime",
  "broad-exception-caught",                # Duplicated with Ruff (BLE001)
  "broad-exception-raised",                # Duplicated with Ruff (TRY002)
  "cell-var-from-loop",                    # Duplicated with Ruff (B023)
  "consider-ternary-expression",           # Duplicated with Ruff (SIM108)
  "dangerous-default-value",               # Duplicated with Ruff (B006)
  "duplicate-except",                      # Duplicated with Ruff (B014)
  "duplicate-key",                         # Duplicated with Ruff (F601)
  "duplicate-value",                       # Duplicated with Ruff (B033)
  "eq-without-hash",                       # Duplicated with Ruff (PLW1641)
  "eval-used",                             # Duplicated with Ruff (S307)
  "exec-used",                             # Duplicated with Ruff (S102)
  "expression-not-assigned",               # Duplicated with Ruff (B018)
  "f-string-without-interpolation",        # Duplicated with Ruff (F541)
  "fixme",                                 # Duplicated with Ruff (FIX001, FIX002, FIX003, FIX004)
  "forgotten-debug-statement",             # Duplicated with Ruff (T100)
  "format-combined-specification",         # Duplicated with Ruff (F525)
  "format-string-without-interpolation",   # Duplicated with Ruff (F541)
  "global-at-module-level",                # Duplicated with Ruff (PLW0604)
  "global-statement",                      # Duplicated with Ruff (PLW0603)
  "global-variable-not-assigned",          # Duplicated with Ruff (PLW0602)
  "implicit-str-concat",                   # Duplicated with Ruff (ISC001)
  "import-self",                           # Duplicated with Ruff (PLW0406)
  "inconsistent-quotes",                   # Duplicated with Ruff (Q000)
  "invalid-envvar-default",                # Duplicated with Ruff (PLW1508)
  "keyword-arg-before-vararg",             # Duplicated with Ruff (B026)
  "logging-format-interpolation",          # Duplicated with Ruff (G001)
  "logging-fstring-interpolation",         # Duplicated with Ruff (G004)
  "logging-not-lazy",                      # Duplicated with Ruff (G002)
  "lost-exception",                        # Duplicated with Ruff (B012)
  "method-cache-max-size-none",            # Duplicated with Ruff (B019)
  "misplaced-future",                      # Duplicated with Ruff (F404)
  "missing-format-argument-key",           # Duplicated with Ruff (F524)
  "named-expr-without-context",            # Duplicated with Ruff (PLW0131)
  "nan-comparison",                        # Duplicated with Ruff (PLW0177)
  "nested-min-max",                        # Duplicated with Ruff (PLW3301)
  "non-ascii-file-name",                   # Duplicated with Ruff (N999)
  "pointless-exception-statement",         # Duplicated with Ruff (PLW0133)
  "pointless-statement",                   # Duplicated with Ruff (B018)
  "protected-access",                      # Duplicated with Ruff (SLF001)
  "raise-missing-from",                    # Duplicated with Ruff (B904)
  "redefined-builtin",                     # Duplicated with Ruff (A001)
  "redefined-loop-name",                   # Duplicated with Ruff (PLW2901)
  "redefined-slots-in-subclass",
  "redundant-u-string-prefix",             # Duplicated with Ruff (UP025)
  "reimported",                            # Duplicated with Ruff (F811)
  "self-assigning-variable",               # Duplicated with Ruff (PLW0127)
  "self-cls-assignment",
  "shallow-copy-environ",
  "subprocess-popen-preexec-fn",           # Duplicated with Ruff (PLW1509)
  "subprocess-run-check",                  # Duplicated with Ruff (PLW1510)
  "super-without-brackets",                # Duplicated with Ruff (PLW0245)
  # "try-except-raise",                    # Duplicated with Ruff (TRY302)
  "unknown-option-value",
  "unnecessary-ellipsis",                  # Duplicated with Ruff (PIE790)
  # "unnecessary-lambda",                  # Duplicated with Ruff (PLW0108)
  "unnecessary-pass",                      # Duplicated with Ruff (PIE790)
  "unnecessary-semicolon",                 # Duplicated with Ruff (E703)
  # "unspecified-encoding",                # Duplicated with Ruff (PLW1514)
  "unused-argument",                       # Duplicated with Ruff (ARG001)
  "unused-format-string-argument",         # Duplicated with Ruff (F507)
  "unused-format-string-key",              # Duplicated with Ruff (F504)
  "unused-import",                         # Duplicated with Ruff (F401)
  "unused-variable",                       # Duplicated with Ruff (F841)
  "useless-else-on-loop",                  # Duplicated with Ruff (PLW0120)
  "useless-with-lock",                     # Duplicated with Ruff (PLW2101)
  "using-f-string-in-unsupported-version",
  "wildcard-import",                       # Duplicated with Ruff (F403)
  # Convention
  "bad-classmethod-argument",              # Duplicated with Ruff (N804)
  "bad-docstring-quotes",                  # Duplicated with Ruff (Q002)
  # "compare-to-empty-string",             # Duplicated with Ruff (PLC1901)
  "consider-iterating-dictionary",         # Duplicated with Ruff (SIM118)
  # "consider-using-any-or-all",           # Duplicated with Ruff (SIM110, SIM111)
  "consider-using-dict-items",             # Duplicated with Ruff (PLC0206)
  # "docstring-first-line-empty",          # Duplicated with Ruff (D210)
  # "empty-docstring",                     # Duplicated with Ruff (D419)
  "import-outside-toplevel",               # Duplicated with Ruff (PLC0415)
  # "import-private-name",                 # Duplicated with Ruff (PLC2701)
  "invalid-name",                          # Duplicated with Ruff (N815)
  "line-too-long",                         # Duplicated with Ruff (E501)
  "misplaced-comparison-constant",         # Duplicated with Ruff (SIM300)
  # "missing-class-docstring",             # Duplicated with Ruff (D101)
  "missing-final-newline",                 # Duplicated with Ruff (W292)
  # "missing-function-docstring",          # Duplicated with Ruff (D103)
  # "missing-module-docstring",            # Duplicated with Ruff (D100)
  "multiple-imports",                      # Duplicated with Ruff (E401)
  "multiple-statements",                   # Duplicated with Ruff (E701, E702)
  "non-ascii-module-import",               # Duplicated with Ruff (PLC2403)
  "non-ascii-name",                        # Duplicated with Ruff (PLC2401)
  "single-string-used-for-slots",          # Duplicated with Ruff (PLC0205)
  "singleton-comparison",                  # Duplicated with Ruff (E711, E712)
  # "trailing-newlines",                   # Duplicated with Ruff (W391)
  "trailing-whitespace",                   # Duplicated with Ruff (W291)
  "typevar-double-variance",               # Duplicated with Ruff (PLC0131)
  "typevar-name-incorrect-variance",       # Duplicated with Ruff (PLC0105)
  "typevar-name-mismatch",                 # Duplicated with Ruff (PLC0132)
  "ungrouped-imports",                     # Duplicated with Ruff (I001)
  "unidiomatic-typecheck",                 # Duplicated with Ruff (E721)
  "unnecessary-direct-lambda-call",        # Duplicated with Ruff (PLC3002)
  # "unnecessary-dunder-call",             # Duplicated with Ruff (PLC2801)
  "unnecessary-lambda-assignment",         # Duplicated with Ruff (E731)
  "unneeded-not",                          # Duplicated with Ruff (SIM208)
  "use-implicit-booleaness-not-len",       # Duplicated with Ruff (PLC1802)
  # "use-maxsplit-arg",                    # Duplicated with Ruff (PLC0207)
  "use-sequence-for-iteration",            # Duplicated with Ruff (PLC0208)
  "useless-import-alias",                  # Duplicated with Ruff (PLC0414)
  "wrong-import-order",                    # Duplicated with Ruff (I001)
  "wrong-import-position",                 # Duplicated with Ruff (E402)
  # Refactor
  "comparison-of-constants",               # Duplicated with Ruff (PLR0133)
  "comparison-with-itself",                # Duplicated with Ruff (PLR0124)
  "consider-alternative-union-syntax",     # Duplicated with Ruff (UP007)
  "consider-merging-isinstance",           # Duplicated with Ruff (SIM101)
  "consider-swap-variables",               # Duplicated with Ruff (PLR1712)
  "consider-using-alias",                  # Duplicated with Ruff (UP006)
  # "consider-using-augmented-assign",     # Duplicated with Ruff (PLR6104)
  "consider-using-dict-comprehension",     # Duplicated with Ruff (C402)
  "consider-using-from-import",            # Duplicated with Ruff (PLR0402)
  "consider-using-generator",              # Duplicated with Ruff (C417)
  "consider-using-get",                    # Duplicated with Ruff (SIM401)
  "consider-using-in",                     # Duplicated with Ruff (PLR1714)
  "consider-using-min-builtin",            # Duplicated with Ruff (PLR1730)
  "consider-using-max-builtin",            # Duplicated with Ruff (PLR1730)
  "consider-using-set-comprehension",      # Duplicated with Ruff (C401)
  "consider-using-sys-exit",               # Duplicated with Ruff (PLR1722)
  # "consider-using-ternary",              # Duplicated with Ruff (PLR1706)
  "consider-using-with",                   # Duplicated with Ruff (SIM115)
  "else-if-used",                          # Duplicated with Ruff (PLR5501)
  "empty-comment",                         # Duplicated with Ruff (PLR2044)
  "inconsistent-return-statements",        # Duplicated with Ruff (RET501, RET502)
  "literal-comparison",                    # Duplicated with Ruff (F632)
  "magic-value-comparison",                # Duplicated with Ruff (PLR2004)
  # "no-classmethod-decorator",            # Duplicated with Ruff (PLR0202)
  "no-else-break",                         # Duplicated with Ruff (RET508)
  "no-else-continue",                      # Duplicated with Ruff (RET507)
  "no-else-raise",                         # Duplicated with Ruff (RET506)
  "no-else-return",                        # Duplicated with Ruff (RET505)
  # "no-self-use",                         # Duplicated with Ruff (PLR6301)
  # "no-staticmethod-decorator",           # Duplicated with Ruff (PLR0203)
  "property-with-parameters",              # Duplicated with Ruff (PLR0206)
  "redefined-argument-from-local",         # Duplicated with Ruff (PLR1704)
  "simplifiable-if-expression",            # Duplicated with Ruff (SIM210, SIM211)
  "simplifiable-if-statement",             # Duplicated with Ruff (SIM108)
  "stop-iteration-return",
  "super-with-arguments",                  # Duplicated with Ruff (UP008)
  "too-complex",                           # Duplicated with Ruff (C901)
  "too-many-arguments",                    # Duplicated with Ruff (PLR0913)
  # "too-many-boolean-expressions",        # Duplicated with Ruff (PLR0916)
  # "too-many-positional-arguments",       # Duplicated with Ruff (PLR0917)
  "too-many-branches",                     # Duplicated with Ruff (PLR0912)
  # "too-many-locals",                     # Duplicated with Ruff (PLR0914)
  "too-many-nested-blocks",                # Duplicated with Ruff (PLR1702)
  # "too-many-public-methods",             # Duplicated with Ruff (PLR0904)
  "too-many-return-statements",            # Duplicated with Ruff (PLR0911)
  "too-many-statements",                   # Duplicated with Ruff (PLR0915)
  "trailing-comma-tuple",                  # Duplicated with Ruff (COM818)
  "unnecessary-comprehension",             # Duplicated with Ruff (C416)
  "use-a-generator",                       # Duplicated with Ruff (C419)
  "unnecessary-dict-index-lookup",         # Duplicated with Ruff (PLR1733)
  "use-list-literal",                      # Duplicated with Ruff (C405)
  "use-dict-literal",                      # Duplicated with Ruff (C406)
  "unnecessary-list-index-lookup",         # Duplicated with Ruff (PLR1736)
  "use-yield-from",                        # Duplicated with Ruff (UP028)
  "use-set-for-membership",                # Duplicated with Ruff (PLR6201)
  "useless-object-inheritance",            # Duplicated with Ruff (UP004)
  "useless-option-value",
  "useless-return",                        # Duplicated with Ruff (PLR1711)
  # Project Customizations
  "too-few-public-methods",                # Data classes don't need methods
]
enable = [ "c-extension-no-member", "useless-suppression" ]
# Test files routinely access private members and use late imports for patching.
# redefined-outer-name: pytest fixtures shadow module-scope definitions by design.
per-file-ignores = [
  "**/tests/**/*.py:protected-access,import-outside-toplevel,redefined-outer-name",
]
[tool.pylint.method_args]
timeout-methods = [
  "requests.api.delete",
  "requests.api.get",
  "requests.api.head",
  "requests.api.post",
  "requests.api.put",
]
[tool.pylint.string]
# Conflicts with ruff - ruff allows single quotes inside f-strings when outer string uses double quotes
check-quote-consistency = false
[tool.pylint.typecheck]
# Alembic's `op` and `context` are runtime proxies whose members are attached dynamically; pylint's
# static analysis can't see them and trips no-member on every migration helper call. Telling pylint
# to skip member checks for the modules entirely is the documented escape hatch.
ignored-modules = [ "alembic.context", "alembic.op" ]

[tool.pyproject-fmt]
keep_full_version = true
generate_python_version_classifiers = false
table_format = "long"
collapse_tables = [ "project.authors" ]

[tool.mypy]
disallow_any_unimported = true
files = [ "src", "tests" ]
# ``tests/fixtures`` mirrors ``[tool.pytest.ini_options].pythonpath`` so mypy resolves
# ``from make_clip import make_clip`` in tests/conftest.py the same way pytest does.
mypy_path = [ "src", "tests/fixtures" ]
show_column_numbers = true
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
# Show logs during test runs for better debugging
log_cli = false  # pytest -o log_cli=true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = [
  "--import-mode=importlib", # See: https://docs.pytest.org/en/stable/explanation/pythonpath.html#import-modes
  "--strict-config",         # Error on unknown configuration options
  "--strict-markers",        # Require all @pytest.mark.* decorators to be registered (prevents typos)
  "--tb=short",              # Shorter traceback format for cleaner output
  "-ra",                     # Show summary of all test outcomes (passed, failed, skipped, etc.)
]
testpaths = [ "tests" ]
# Put tests/fixtures on sys.path so conftest can ``from make_clip import make_clip`` directly,
# bypassing the ``tests`` namespace (which a third-party package — ultralytics — shadows by
# shipping its own ``tests/__init__.py`` in site-packages).
pythonpath = [ "tests/fixtures" ]
filterwarnings = [
  "error", # Treat warnings as errors to catch issues early
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
  "@overload",
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
[tool.coverage.run]
branch = true
source = [ "src" ]
omit = [ "**/test_*.py", "**/tests/*" ]

[tool.basedpyright]
# Pixi-managed virtualenv; required so basedpyright can resolve installed dependencies.
venvPath = ".pixi/envs/"
venv = "default"
# Disabled because ruff's ISC001 is also ignored project-wide (it conflicts with the formatter).
# Both tools agree to not flag implicit string concatenation.
reportImplicitStringConcatenation = false
# Mirrors ``[tool.pytest.ini_options].pythonpath`` so basedpyright resolves
# ``from make_clip import make_clip`` in tests/conftest.py the same way pytest does at runtime.
extraPaths = [ "tests/fixtures" ]
exclude = [
  "**/.*",
  "**/__pycache__",
]
# Tests may access ``_underscored`` private members of the modules they exercise; this is the
# basedpyright analog of ruff's ``SLF001`` per-file-ignore for tests.
executionEnvironments = [
  { root = "tests", reportPrivateUsage = "none" },
]
